--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,8 @@
 tasks:
   - name: aws-cli
+    env:
+      AWS_CLI_AUTOPROMPT= on-partial
     env: 
-       c
        cd /workspace
        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
        unzip awscliv2.zip
