--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 tasks:
   - name: aws-cli
     env:
-      AWS_CLI_AUTOPROMPT= on-partial
+      AWS_CLI_AUTOPROMPT: on-partial
     env: 
        cd /workspace
        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
